<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="20dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ItemNameTxt"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/item_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ItemLocationTxt"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/item_location"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/UserNameTxt"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/user_name" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/GmailIdTxt"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/gmail_id"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/MessageTxt"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/message"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>